Improve java11